chaim-bprint-spec/tests/fixtures/invalid/invalid-enum.bprint
{
  "schemaVersion": "1.0",
  "entityName": "Test",
  "description": "Test entity with invalid empty enum",
  "identity": { "fields": ["id"] },
  "fields": [
    { "name": "id", "type": "string", "required": true },
    { "name": "status", "type": "string", "enum": [], "required": false }
  ]
}
